--- a/client/src/views/Signup/Signup.css
+++ b/client/src/views/Signup/Signup.css
@@ -1,9 +1,12 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+}
+.signup-main-div{
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 .signup-container {
     background-color: #fff;
