--- a/client/src/components/GoalCard/GoalCard.css
+++ b/client/src/components/GoalCard/GoalCard.css
@@ -13,7 +13,7 @@
     -webkit-appearance: none;
     width: 100%;
     height: 5px;
-    background: #ff0e0e6c;
+    background: #a445b2;
     outline: none;
     opacity: 0.7;
     transition: opacity .2s;
@@ -29,7 +29,7 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #4CAF50;
+    background: #a445b2;
     cursor: pointer;
   }
   
